api for count of audio and video
