# controller/song.js
@@ -294,6 +294,17 @@ const allVideosWithArtistId = (req, res) => {
     });
 };
 
+const noOfAudioNoOfVideo = (req, res)=>{
+    db.query('CALL sp_NoOfAudioNoOfVideo()', [], function (err, rows) {
+        if (err)
+            return res.status(200).json([{ success: 'Fail to get records', error: err }]);
+        if (rows[0].length == 0)
+            return res.status(200).json([{ success: 'Table is empty' }]);
+        rows[0][0].success = 'Successfully get number of audio and video';
+        return res.status(200).json(rows[0]);
+    });
+}
+
 exports.songUploadMulter = songUploadMulter;
 exports.songUpload = songUpload;
 exports.songInsert = songInsert;
@@ -306,3 +317,4 @@ exports.allArtist = allArtist;
 exports.countMediaArtId = countMediaArtId;
 exports.allVideosArtist = allVideosArtist;
 exports.allVideosWithArtistId = allVideosWithArtistId;
+exports.noOfAudioNoOfVideo = noOfAudioNoOfVideo;
